# infmax-simulator-icm-mln

./: .gitignore  .gitmodules  LICENSE  README.md  evaluate_ssm.py  experiments.ipynb  generate_sp.py  postprocessing.ipynb  pyproject.toml  run_experiments.py  test_reproducibility.py  torch_micm.ipynb
.dvc/: config
_configs/: eval_gt.yaml  eval_ssm.yaml  example.yaml  example_classic.yaml  example_tensor.yaml  gen_sp.yaml  gen_sp_classic.yaml
_data_set/: arxiv_netscience_coauthorship.dvc  cannes_2013_social.dvc  small_artificial.dvc  small_real.dvc  timik1q2009.dvc
_test_data/: proto-AND--p-0.1--net-toy_network.csv  proto-AND--p-0.35--net-toy_network.csv  proto-AND--p-0.9--net-toy_network.csv  proto-OR--p-0.1--net-toy_network.csv  proto-OR--p-0.35--net-toy_network.csv  proto-OR--p-0.65--net-toy_network.csv  proto-OR--p-0.9--net-toy_network.csv
_test_data/FixedBudgetMICModel/: proto-AND--p-0.1--net-toy_network.csv
_test_data/classic/: proto-AND--p-0.65--net-toy_network.csv  proto-AND--p-0.9--net-toy_network.csv  proto-OR--p-0.1--net-toy_network.csv
_test_data/tensor/: proto-AND--p-0.65--net-toy_network.csv  proto-AND--p-0.9--net-toy_network.csv  proto-OR--p-0.1--net-toy_network.csv  proto-OR--p-0.65--net-toy_network.csv  (+1 more)
env/: conda.yaml  example.env  requirements.txt
misc/: __init__.py  fmri74.py  net_loader.py  spreading_model.py  timik.ipynb  torch_model.py  utils.py
runners/: commons.py  main_runner.py  runner_greedy.py  runner_optimised.py  step_classic.py  step_tensor.py  step_utils.py
src/: __init__.py  os_utils.py  sim_utils.py  utils.py
(+78 files in other folders)
